✨ [feat] Array Implementation + Principal Stacks Implementation + Static Structure